// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component DropDownIcon should pass iconSymbol 1`] = `
<div
  className="iconDiv full-height d-flex align-items-center justify-content-center flex-column"
  iconSymbol="iconLogo"
>
  <div
    className="full-height d-flex align-items-center justify-content-center"
  >
    <Icon
      className="icon"
      height={20}
      width={20}
    />
  </div>
  <div
    className="iconText icon-text full-height d-flex align-items-center justify-content-center"
  />
</div>
`;

exports[`component DropDownIcon should pass iconText 1`] = `
<div
  className="iconDiv full-height d-flex align-items-center justify-content-center flex-column"
>
  <div
    className="full-height d-flex align-items-center justify-content-center"
  >
    <Icon
      className="icon"
      height={20}
      width={20}
    />
  </div>
  <div
    className="iconText icon-text full-height d-flex align-items-center justify-content-center"
  >
    iconText
  </div>
</div>
`;

exports[`component DropDownIcon should render 1`] = `
<div
  className="iconDiv full-height d-flex align-items-center justify-content-center flex-column"
>
  <div
    className="full-height d-flex align-items-center justify-content-center"
  >
    <Icon
      className="icon"
      height={20}
      width={20}
    />
  </div>
  <div
    className="iconText icon-text full-height d-flex align-items-center justify-content-center"
  />
</div>
`;
